hphp/hack/test/typecheck/class_pointers/is_as.php.exp
ERROR: File "is_as.php", line 8, characters 13-20:
Invalid `is` expression hint (Typing[4195])
  File "is_as.php", line 8, characters 13-20:
  The `is` operator cannot be used with a class pointer type
ERROR: File "is_as.php", line 11, characters 13-25:
Invalid `is` expression hint (Typing[4195])
  File "is_as.php", line 11, characters 13-25:
  The `is` operator cannot be used with a class pointer type
ERROR: File "is_as.php", line 14, characters 10-17:
Invalid return type (Typing[4110])
  File "is_as.php", line 7, characters 25-32:
  Expected `class<I>`
  File "classname.hhi", line 14, characters 27-32:
  But got `string`
ERROR: File "is_as.php", line 19, characters 18-25:
Invalid `as` expression hint (Typing[4195])
  File "is_as.php", line 19, characters 18-25:
  The `as` operator cannot be used with a class pointer type
ERROR: File "is_as.php", line 21, characters 12-30:
Invalid return type (Typing[4110])
  File "is_as.php", line 17, characters 34-41:
  Expected `class<I>`
  File "is_as.php", line 21, characters 12-30:
  But got `bool`
ERROR: File "is_as.php", line 21, characters 18-30:
Invalid `is` expression hint (Typing[4195])
  File "is_as.php", line 21, characters 18-30:
  The `is` operator cannot be used with a class pointer type
